Fixing layout issue with copyright.

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -519,6 +519,7 @@ a {
           font-size: 0.7em;
           margin: 0.5rem 0;
           padding: 0 1.5rem;
+          display: block;
         }
 }
 .collection_blocks ul {
